:bug: :bug: fix some emoji toggle issues on small sceen

--- a/style.css
+++ b/style.css
@@ -99,16 +99,20 @@
 	opacity: 1;
 }*/
 .label {
-	width: auto;
-	height: auto;
+	/* width: 100%;
+	height: 100%; */
 	position: relative;
+	display: flex;
+	/* flex-direction: column; */
+	align-items: center;
+	/* justify-content: center; */
 }
 .switch-label {
-	display: flex;
-	align-items: flex-end;
-	justify-content: center;
 	width: 2.2rem;
 	height: 1rem;
+	font-size: 1rem;
+	display: flex;
+	align-items: center;
 }
 .switch-label::before,
 .switch-label::after {
@@ -118,19 +122,18 @@
 	cursor: pointer;
 }
 .switch-label::before {
-	width: 100%;
-	height: 100%;
+	width: 2.2rem;
+	height: 1rem;
 	background-color: var(--dark-text);
 	border-radius: 100rem;
 	-webkit-transition: background-color 0.25s ease;
 	transition: background-color 0.25s ease;
 }
 .switch-label::after {
-	top: -0.25rem;
+	/* top: -0.25rem; */
 	left: -0.25rem;
 	content: var(--switch-icon);
 	font-size: 1.5rem;
-	/* text-shadow: 0 0 1rem var(--switch-shadow-color); */
 	animation: blink-shadow 2s linear infinite;
 	-webkit-transition: left 0.25s ease;
 	transition: left 0.25s ease;
@@ -153,6 +156,10 @@
 	100% {
 		text-shadow: 0 0 0rem var(--switch-shadow-color);
 	}
+}
+
+.nav-switch-label {
+	display: flex;
 }
 
 * {
@@ -245,6 +252,10 @@ header h1 {
 
 header a {
 	color: var(--header-text-color);
+}
+
+nav {
+	flex: 1;
 }
 
 nav a {
@@ -395,7 +406,7 @@ label {
 }
 
 label:hover {
-	/*color: var(--highlight-color);*/
+	color: var(--highlight-color);
 }
 
 label:before {
@@ -669,7 +680,7 @@ article time {
 }
 
 @media only screen and (max-width: 540px) {
-	nav {
+	.nav-switch-label {
 		width: 100%;
 	} /* Fix for older webkit versions */
 
